chore(swagger): update swagger json file
